RESOLVED FIXED282069
[Observable] Code should not use AbortController directly, and instead use the internal AbortSignal API
https://bugs.webkit.org/show_bug.cgi?id=282069
Summary [Observable] Code should not use AbortController directly, and instead use th...
Marais Rossouw
Reported 2024-10-24 16:17:24 PDT
It appears that the Observables code (InternalObserver*.cpp, Subscriber.cpp, Observable.cpp, et al) is the only code in the WebKit that internally uses the AbortController to the pluck the signal. We should be using the AbortSignal directly, its slightly faster, less allocations, and more consistent.
Attachments
Marais Rossouw
Comment 1 2024-10-24 22:59:16 PDT
EWS
Comment 2 2024-10-25 18:37:37 PDT
Committed 285723@main (39636bf8cda7): <https://commits.webkit.org/285723@main> Reviewed commits have been landed. Closing PR #35711 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-25 18:38:14 PDT
Note You need to log in before you can comment on or make changes to this bug.