[Observable] Use AbortSignal directly https://bugs.webkit.org/show_bug.cgi?id=282069

Reviewed by Chris Dumez.

As AbortController wraps an AbortSignal, there is no need for our
internal code to go through it as well. We save allocations, and still
entirely spec complaint. Seeing as the spec reads "to signal abort" in various
parts, which is only a concept on abort signals anyway.

* Source/WebCore/dom/InternalObserverFirst.cpp:
(WebCore::createInternalObserverOperatorFirst):
  The visitor signal should just be an AbortSignal, than through the
  AbortController bindings.
  Drive-by: Repeated Ref { m_promise } -> protectedPromise
* Source/WebCore/dom/Subscriber.cpp:
(WebCore::Subscriber::Subscriber):
  Construct a new AbortSignal, than AbortController
(WebCore::Subscriber::close):
  We need to signalAbort the AbortSignal, than abort the AbortController
* Source/WebCore/dom/Subscriber.h:

Canonical link: https://commits.webkit.org/285723@main